--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,27 @@
 inherit_from: .rubocop_todo.yml
 
+require:
+  - 'rubocop-md'
+  - 'rubocop-packaging'
+  - 'rubocop-performance'
+  - 'rubocop-rake'
+  - 'rubocop-rspec'
+
 AllCops:
   TargetRubyVersion: 2.6
+  DisplayCopNames: true # Display the name of the failing cops
   NewCops: enable
+
+Metrics/BlockLength:
+  IgnoredMethods:
+    - context
+    - describe
+    - it
+    - shared_context
+    - shared_examples
+    - shared_examples_for
+    - namespace
+    - draw
 
 Style/StringLiterals:
   Enabled: true
