--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -68,6 +68,11 @@ jobs:
       - name: Run tests
         run: bundle exec rake test
 
+      - name: CodeClimate Post-build Notification
+        run: cc-test-reporter after-build
+        if: matrix.ruby == '2.7' && github.event_name != 'pull_request' && always()
+        continue-on-error: ${{ matrix.experimental != 'false' }}
+
       - name: Code Coverage Summary Report
         uses: irongut/CodeCoverageSummary@v1.2.0
         with:
