--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,8 @@
 inherit_from: .rubocop_todo.yml
 
+inherit_gem:
+  rubocop-lts: rubocop-lts.yml
+
 require:
   - 'rubocop-md'
   - 'rubocop-packaging'
@@ -8,9 +11,7 @@ require:
   - 'rubocop-rspec'
 
 AllCops:
-  TargetRubyVersion: 2.6
   DisplayCopNames: true # Display the name of the failing cops
-  NewCops: enable
 
 Metrics/BlockLength:
   IgnoredMethods:
