--- a/.github/workflows/unsupported.yml
+++ b/.github/workflows/unsupported.yml
@@ -29,10 +29,8 @@ jobs:
       fail-fast: false
       matrix:
         experimental: [false]
-        rubygems:
-          - latest
-        bundler:
-          - latest
+        gemfile:
+          - vanilla
         ruby:
           - "2.6"
 
