--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,36 +1,2 @@
-inherit_from: .rubocop_todo.yml
-
 inherit_gem:
-  rubocop-lts: rubocop-lts.yml
-
-require:
-  - 'rubocop-md'
-  - 'rubocop-packaging'
-  - 'rubocop-performance'
-  - 'rubocop-rake'
-  - 'rubocop-rspec'
-
-AllCops:
-  DisplayCopNames: true # Display the name of the failing cops
-
-Metrics/BlockLength:
-  IgnoredMethods:
-    - context
-    - describe
-    - it
-    - shared_context
-    - shared_examples
-    - shared_examples_for
-    - namespace
-    - draw
-
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
-
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
-
-Gemspec/RequiredRubyVersion:
-  Enabled: false
+  rubocop-lts: config/rubygem_rspec.yml
