--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,6 +3,7 @@ name: Code Coverage
 env:
   CI_CODECOV: true
   COVER_ALL: true
+  COVERAGE: true
 
 on:
   push:
@@ -33,10 +34,8 @@ jobs:
       fail-fast: false
       matrix:
         experimental: [false]
-        rubygems:
-          - latest
-        bundler:
-          - latest
+        gemfile:
+          - coverage
         ruby:
           - "2.7"
 
@@ -45,7 +44,6 @@ jobs:
     steps:
       - uses: amancevice/setup-code-climate@v0
         name: CodeClimate Install
-        if: matrix.ruby == '2.7' && github.event_name != 'pull_request' && always()
         with:
           cc_test_reporter_id: ${{ secrets.CC_TEST_REPORTER_ID }}
 
@@ -62,7 +60,6 @@ jobs:
 
       - name: CodeClimate Pre-build Notification
         run: cc-test-reporter before-build
-        if: matrix.ruby == '2.7' && github.event_name != 'pull_request' && always()
         continue-on-error: ${{ matrix.experimental != 'false' }}
 
       - name: Run tests
@@ -70,11 +67,11 @@ jobs:
 
       - name: CodeClimate Post-build Notification
         run: cc-test-reporter after-build
-        if: matrix.ruby == '2.7' && github.event_name != 'pull_request' && always()
         continue-on-error: ${{ matrix.experimental != 'false' }}
 
       - name: Code Coverage Summary Report
-        uses: irongut/CodeCoverageSummary@v1.2.0
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        if: ${{ github.event_name == 'pull_request' }}
         with:
           filename: ./coverage/coverage.xml
           badge: true
@@ -84,12 +81,12 @@ jobs:
           hide_complexity: true
           indicators: true
           output: both
-          thresholds: '95 97'
+          thresholds: '100 100'
         continue-on-error: ${{ matrix.experimental != 'false' }}
 
       - name: Add Coverage PR Comment
         uses: marocchino/sticky-pull-request-comment@v2
-        if: matrix.ruby == '2.7' && always()
+        if: ${{ github.event_name == 'pull_request' }}
         with:
           recreate: true
           path: code-coverage-results.md
@@ -97,18 +94,6 @@ jobs:
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
-        if: matrix.ruby == '2.7' && github.event_name != 'pull_request' && always()
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
         continue-on-error: ${{ matrix.experimental != 'false' }}
-
-#      Using the codecov gem instead.
-#      - name: CodeCov
-#        uses: codecov/codecov-action@v2
-#        if: matrix.ruby == '2.7' && github.event_name != 'pull_request' && always()
-#        with:
-#          files: ./coverage/coverage.xml
-#          flags: unittests
-#          name: codecov-upload
-#          fail_ci_if_error: true
-#        continue-on-error: ${{ matrix.experimental != 'false' }}
