--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -9,15 +9,12 @@ on:
 jobs:
   danger:
     runs-on: ubuntu-latest
+    # Disabled until danger is updated
     if: false
     # if: github.event_name  == 'pull_request' # if only run pull request when multiple trigger workflow
     strategy:
       fail-fast: false
       matrix:
-        rubygems:
-          - latest
-        bundler:
-          - latest
         ruby:
           - "2.7"
     steps:
