--- a/.github/workflows/heads.yml
+++ b/.github/workflows/heads.yml
@@ -29,10 +29,8 @@ jobs:
       fail-fast: false
       matrix:
         experimental: [true]
-        rubygems:
-          - latest
-        bundler:
-          - latest
+        gemfile:
+          - vanilla
         ruby:
           - truffleruby+graalvm-head
           - truffleruby-head
@@ -40,12 +38,12 @@ jobs:
           - ruby-head
         include:
           # Includes a new variable experimental with a value of false
-          #   for the matrix legs matching rubygems: latest, which is all of them.
+          #   for the matrix legs matching gemfile: vanilla, which is all of them.
           # This is here for parity with the unsupported.yml
           # This is a hack. Combined with continue-on-error it should allow us
           #   to have a workflow with allowed failure.
           # This is the "supported" build matrix, so only the "head" builds are experimental here.
-          - rubygems: latest
+          - gemfile: vanilla
             experimental: true
 
     runs-on: ubuntu-latest
