📝 bundler latest is working again

--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -15,6 +15,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        rubygems:
+          - latest
+        bundler:
+          - latest
         ruby:
           - "2.7"
     steps:
