--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -21,6 +21,10 @@ jobs:
       fail-fast: false
       matrix:
         experimental: [false]
+        rubygems:
+          - latest
+        bundler:
+          - latest
         gemfile:
           - style
         ruby:
