--- a/.github/workflows/unsupported.yml
+++ b/.github/workflows/unsupported.yml
@@ -29,6 +29,10 @@ jobs:
       fail-fast: false
       matrix:
         experimental: [false]
+        rubygems:
+          - latest
+        bundler:
+          - latest
         gemfile:
           - vanilla
         ruby:
